--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -189,20 +189,20 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 											<a href={`/articulos/${b.slug}`} class="flex flex-col py-8 px-6 group">
 
 												<div class="flex items-center justify-between mb-4 gap-2">
-													<h3 class="article-title text-base line-clamp-1">{b.data.title}</h3>
+													<h3 class="article-title text-base line-clamp-2 md:line-clamp-1">{b.data.title}</h3>
 													<span class="icon-[material-symbols--arrow-forward-ios] rotate-y-180 group-hover:rotate-y-[-180] transition-transform duration-300" role="img" aria-hidden="true" />
 												</div>
 
 												<div class="mb-6">
-													<p class="text-base text-brand-white/60 line-clamp-2">{b.data.metadescription}</p>
+													<p class="text-base text-brand-white/60 line-clamp-4 md:line-clamp-2">{b.data.metadescription}</p>
 												</div>
 
-												<div class="flex items-center justify-between">
+												<div class="flex flex-col items-start justify-normal md:flex-row md:items-center md:justify-between">
 													<ul>
 														{
 															b.data.tags?.length > 0 && (
 																<footer>
-																	<ul class="flex gap-4">
+																	<ul class="flex gap-2 lg:gap-4">
 																		{
 																			b.data.tags.map((t) => (
 																				<li class="px-2 py-1 border-1 rounded-sm border-brand-white/20 text-xs text-brand-white/50">
@@ -215,7 +215,7 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 															)
 														}
 													</ul>
-													<time class="text-sm text-brand-white/50">
+													<time class="text-sm text-brand-white/50 mt-4 md:mt-0">
 														{
 															b.data.date.toLocaleDateString("es-ES", {
 																day: "numeric",
