--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,17 +55,7 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 
 				<header class="text-left pt-8">
 
-					<img src="images/profile-pic.webp" alt="Foto de perfil" width="64" height="64" class="rounded-full size-16" />
-
-					<div class="flex items-center gap-3 pt-2">
-						<h1 class="text-brand-white text-h1 leading-tight">Fernando Guerrero</h1>
-						<i class="icon-[octicon--verified-16] text-brand-accent size-6" role="img" aria-hidden="true"></i>
-					</div>
-
-
-					<p class="text-brand-white/60 text-h5 font-geist">Marketing<span> · </span>Desarrollo Web</p>
-
-					<nav class="flex gap-4 mt-4 items-center">
+					<nav class="flex gap-6 items-center">
 
 						<a class="flex gap-2 text-brand-white items-center cursor-pointer" href="/contacto">
 							<i class="icon-[fe--info] size-4" aria-hidden="true"></i>
@@ -73,38 +63,96 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 						</a>
 
 						<a class="flex gap-2 text-brand-white items-center cursor-pointer" href="/404">
-							<i class="icon-[ph--article] size-4" aria-hidden="true"></i>
-							<span class="underline">Blogs (no disponible)</span>
+							<i class="icon-[prime--box] size-4" aria-hidden="true"></i>
+							<span class="underline">Proyectos</span>
 						</a>
-						
+
+						<a class="flex gap-2 text-brand-white items-center cursor-pointer" href="/404">
+							<i class="icon-[ph--article] size-4" aria-hidden="true"></i>
+							<span class="underline">Artículos</span>
+						</a>
+
 					</nav>
 
+
+					<div class="flex items-center gap-3 pt-12">
+						<h1 class="text-brand-white text-h1 leading-tight">Fernando Guerrero</h1>
+						<i class="icon-[octicon--verified-16] text-brand-accent size-6" role="img" aria-hidden="true"></i>
+					</div>
+
+					<p class="text-brand-white/90 mt-4 text-h5 font-geist">Marketing<span> · </span>Desarrollo Web<span> · </span>Diseño Gráfico</p>
+						
+					<p class="mt-4 text-base text-brand-white/60 leading-relaxed">
+						Trabajo entre marketing y desarrollo, creando soluciones simples y duraderas, centradas en el usuario y el cliente.
+					</p>
+						
 				</header>
 
 				<div class="py-12 md:py-16">
 					<hr class="border-brand-white/20">
 				</div>
 
-				<section id="about">
+				<section id="proyectos">
 					<h2 class="text-h2 text-brand-white mb-6">
-						Sobre mí
+						Experiencia
 					</h2>
 
-					<div class="flex flex-col gap-4 text-base text-brand-white/60 leading-relaxed">
-						
-						<p>
-							<strong class="text-brand-white/80">Responsable de Marketing en
-							<a class="underline text-brand-white/80" href="https://fsi.training/">FSI Training</a>.</strong>
-						</p>
+					<ol class="flex flex-col gap-y-8">
 
-						<p>
-							Trabajo entre marketing y desarrollo, con una visión de ingeniería aplicada a sistemas digitales. Busco soluciones simples, y durables, centradas en la experiencia de cliente y usuario.
-						</p>
-						
-						<p>
-							Vengo del diseño, pasé por el marketing y la analítica. Hoy aplico las enseñanzas del camino para entender, estructurar y mejorar la propuesta de valor de mi empresa, con la colaboración de un excelente equipo.
-						</p>
-					</div>
+						<li class="flex flex-col px-6 py-8 border-1 bg-brand-dark border-brand-white/20 rounded-lg">
+
+							<div class="flex flex-col md:flex-row gap-x-6">
+								<div class="shrink-0 mb-2 md:mb-0">
+									<img class="size-16 object-cover" alt="" aria-hidden="true" width="64" height="64" src="/images/fsi.svg"/>
+								</div>
+
+								<div>
+									<h3 class="text-h3">Responsable de Marketing</h3>
+									<div class="flex flex-row gap-x-2 mb-2 text-brand-white/60">
+										<a class="flex underline" href="https://fsi.training/" target="_blank" rel="noopener">FSI Training</a>
+										<span aria-hidden="true">·</span>
+										<time>2024 - actualidad</time>
+									</div>
+									<p class="text-brand-white/50 hidden md:block">
+										Coordinación de un equipo reducido y gestión integral de marketing: desarrollo web y analítica, reporting para dirección, gestión de CRM, edición de clases y organización de eventos internacionales.
+									</p>
+								</div>
+							</div>
+
+							<div class="block mt-2 md:hidden">
+								<p class="text-brand-white/50" aria-hidden="true">
+									Coordinación de un equipo reducido y gestión integral de marketing: desarrollo web y analítica, reporting para dirección, gestión de CRM, edición de clases y organización de eventos internacionales.
+								</p>
+							</div>
+
+						</li>
+
+
+						<li class="flex flex-col px-6 py-8 border-1 bg-brand-dark border-brand-white/20 rounded-lg">
+
+							<div class="flex flex-col md:flex-row gap-x-6">
+								<div class="shrink-0 mb-2 md:mb-0">
+									<img class="size-16 object-cover" alt="" aria-hidden="true" width="64" height="64" src="/images/sidn.svg"/>
+								</div>
+
+								<div>
+									<h3 class="text-h3">Analista de Datos - Dashboard & Interface Design</h3>
+									<div class="flex flex-row gap-x-2 mb-2 text-brand-white/60">
+										<a class="flex underline" href="https://www.sidn.es/" target="_blank" rel="noopener">SIDN Digital Thinking</a>
+										<span aria-hidden="true">·</span>
+										<time>2024</time>
+									</div>
+									<p class="text-brand-white/50 hidden md:block">Diseño de interfaces para IA conversacional, dashboards y reportes para clientes, tracking web de eventos, creación de presentaciones de producto y documentación pública de servicios del departamento.</p>
+								</div>
+							</div>
+
+							<div class="block mt-2 md:hidden">
+								<p class="text-brand-white/50" aria-hidden="true">Diseño de interfaces para IA conversacional, dashboards y reportes para clientes, tracking web de eventos, creación de presentaciones de producto y documentación pública de servicios del departamento.</p>
+							</div>
+
+						</li>
+
+					</ol>
 
 				</section>
 
@@ -178,7 +226,9 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 						Novedades
 					</h2>
 
-					<ul class="grid grid-cols-1 gap-4">
+					<p class="text-brand-white/60">Pronto habrá novedades :)</p>
+
+					<!-- <ul class="grid grid-cols-1 gap-4">
 						{
 							latestblogs.map((b) => {
 								return (
@@ -232,7 +282,7 @@ const description = "Inmortalizando mi presencia en la red. Página web, portfol
 								)
 							})
 						}
-					</ul>
+					</ul> -->
 				
 				</section>
 
